# ai-code-review

./: .env.example  .gitignore  README.md  pyproject.toml  run_server.py  start_server.py
.claude/: settings.local.json
src/ai_code_reviewer/: __init__.py  ai_reviewer.py  cli.py  code_analyzer.py  element_extractor.py  file_fetcher.py  gitlab_diff.py  server.py
src/ai_code_reviewer/application/: __init__.py  review_service.py
src/ai_code_reviewer/domain/: __init__.py
src/ai_code_reviewer/domain/entities/: __init__.py  code_element.py  file_diff.py  remote_file.py  review_request.py  review_result.py
src/ai_code_reviewer/domain/services/: __init__.py  ai_reviewer.py  element_extractor.py  prompts.py
src/ai_code_reviewer/infrastructure/: __init__.py
src/ai_code_reviewer/infrastructure/git/: __init__.py  git_client_base.py  git_factory.py  github_client.py  gitlab_client.py
src/ai_code_reviewer/infrastructure/llm/: __init__.py  anthropic_client.py  llm_client_base.py  llm_factory.py  openai_client.py
src/ai_code_reviewer/static/: index.html
src/ai_code_reviewer/web/: __init__.py  server.py
src/ai_code_reviewer/web/static/: index.html
tests/: __init__.py  test_ai_code_reviewer.py  test_demo.py
